gitops/apps/podcast-feeds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podcast-feeds
spec:
  selector:
    app: podcast-feeds
  ports:
    - port: 80
      targetPort: 80
